--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -13,12 +13,12 @@
   <body>
     <nav>
       <div class="logo">
-        <i class="fa-solid fa-route" style="color: #483d8b"></i>
-        <span><i>AwkwardTraveler</i></span>
+        <i class="fa-solid fa-route" style="color: #dedcef"></i>
+        <span class="title">AwkwardTraveler</span>
       </div>
       <div class="links">
-        <a href="#home">Home</a>
-        <a href="#About Us">About Us</a>
+        <a href="/travelRecommendation/travel_recommendation.html">Home</a>
+        <a href="/travelRecommendation/aboutUs.html">About Us</a>
         <a href="#Contact Us">Contact Us</a>
       </div>
       <div class="searchBar">
@@ -28,9 +28,33 @@
           id="search"
           placeholder="Please enter a destination"
         />
-        <button type="submit">Search</button>
+        <button type="submit" id="submit">Search</button>
         <button type="reset">Reset</button>
       </div>
     </nav>
+    <section id="mainSection">
+      <div id="sideNav">
+        <div class="socials">
+          <i class="fa-brands fa-facebook fa-lg" style="color: #dedcef"></i>
+        </div>
+        <div class="socials">
+          <i class="fa-brands fa-youtube fa-lg" style="color: #dedcef"></i>
+        </div>
+        <div class="socials">
+          <i class="fa-brands fa-instagram fa-lg" style="color: #dedcef"></i>
+        </div>
+      </div>
+      <div class="main">
+        <h1>Explore Dream Destinations</h1>
+        <p class="blurb">
+          Traveling opens the door to new experiences, cultures, and
+          unforgettable memories. Whether you're seeking a relaxing beach
+          escape, an adventurous trek through the mountains, or an immersive
+          cultural journey, our travel agency is here to make your dream trip a
+          reality. Let us help you explore the world with ease and comfort,
+          creating experiences that last a lifetime!
+        </p>
+      </div>
+    </section>
   </body>
 </html>
