Completed About Us Section

--- a/travelRecommendation/aboutUs.html
+++ b/travelRecommendation/aboutUs.html
@@ -54,17 +54,44 @@
         </div>
         <div id="employeeCards">
           <div class="cardTitle">
-          <h3>Our Team</h3>
+            <h3>Our Team</h3>
           </div>
-          <div class="card">
-            <img
-              src="/travelRecommendation/images/person_icon.PNG"
-              alt="person_icon" class="employeeIcon"
-            />
-            <div class="employeeInfo">
-            <p id="employee"><span class="bold">Name:</span></p>
-            <p id="status"><span class="bold">Details on employee</span></p>
-            <p id="position"><span class="bold">CEO</span></p>
+          <div class="cards">
+            <div class="card">
+              <img
+                src="/travelRecommendation/images/person_icon.PNG"
+                alt="person_icon"
+                class="employeeIcon"
+              />
+              <div class="employeeInfo">
+                <p id="employee"><span class="bold">Name:</span></p>
+                <p id="status"><span class="bold">Details on employee</span></p>
+                <p id="position"><span class="bold">CEO</span></p>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="/travelRecommendation/images/person_icon.PNG"
+                alt="person_icon"
+                class="employeeIcon"
+              />
+              <div class="employeeInfo">
+                <p id="employee"><span class="bold">Name:</span></p>
+                <p id="status"><span class="bold">Details on employee</span></p>
+                <p id="position"><span class="bold">CEO</span></p>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="/travelRecommendation/images/person_icon.PNG"
+                alt="person_icon"
+                class="employeeIcon"
+              />
+              <div class="employeeInfo">
+                <p id="employee"><span class="bold">Name:</span></p>
+                <p id="status"><span class="bold">Details on employee</span></p>
+                <p id="position"><span class="bold">CEO</span></p>
+              </div>
             </div>
           </div>
         </div>
