--- a/travelRecommendation/aboutUs.html
+++ b/travelRecommendation/aboutUs.html
@@ -18,12 +18,12 @@
       </div>
       <div class="aboutLinks">
         <a href="/travelRecommendation/travel_recommendation.html">Home</a>
-        <a href="#About Us">About Us</a>
-        <a href="#Contact Us">Contact Us</a>
+        <a href="/travelRecommendation/aboutUs.html">About Us</a>
+        <a href="/travelRecommendation/contactUs.html">Contact Us</a>
       </div>
     </nav>
-    <section id="aboutUsMain">
-      <div id="aboutSideNav">
+    <section id="main">
+      <div id="sideNav">
         <div class="socials">
           <i class="fa-brands fa-facebook fa-lg" style="color: #dedcef"></i>
         </div>
