--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="main">
-        <h1>Explore Dream Destinations</h1>
+        <h1>Explore <br>Dream Destinations</h1>
         <p class="blurb">
           Traveling opens the door to new experiences, cultures, and
           unforgettable memories. Whether you're seeking a relaxing beach
