--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -30,6 +30,7 @@
         />
         <button type="submit" id="submit">Search</button>
         <button type="reset">Reset</button>
+        <div id="searchResults"></div>
       </div>
     </nav>
     <section id="mainSection">
